--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <h1>Home page</h1>
       <img src="https://newsandstory.com/stories/21062184742201828485/21062184742201828485.png" alt="">
-      <h1>Html image</h1> 
+      <h1>Html image above</h1> 
     </main>
   </body>
 </html>
