alt text for image added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <main>
       <h1>Home page</h1>
-      <img src="https://newsandstory.com/stories/21062184742201828485/21062184742201828485.png" alt="">
+      <img src="https://newsandstory.com/stories/21062184742201828485/21062184742201828485.png" alt="image of the word html">
       <h1>Html image above</h1> 
     </main>
   </body>
