--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <h1>Home page</h1>
       <img src="https://newsandstory.com/stories/21062184742201828485/21062184742201828485.png" alt="image of the word html">
-      <h1>Html image above</h1> 
+      <h1>Html image above, video below</h1> 
       <iframe width="420" height="315" src="https://youtu.be/qz0aGYrrlhU"> </iframe>
     </main>
   </body>
